swagger-autogen 적용 및 role, group API 위치 변경
