# routes/user.js
@@ -10,60 +10,37 @@ require("dotenv").config();
 const router = express.Router();
 const JWT_SECRET = process.env.JWT_SECRET;
 
-/**
- * @swagger
- * tags:
- *   name: Users
- *   description: User management
- */
-
-/**
- * @swagger
- * /api/users/signup:
- *   post:
- *     summary: 회원가입
- *     tags: [Users]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               email:
- *                 type: string
- *                 example: 'obiwan98@cj.net'
- *               password:
- *                 type: string
- *                 example: '070404'
- *               role:
- *                 type: string
- *                 example: '66a0bbfe8d7e45a08668b311'
- *               group:
- *                 type: string
- *                 example: '66a0b1bd8d7e45a08668b300'
- *     responses:
- *       201:
- *         description: User created successfully
- *       400:
- *         description: Failed to create user
- */
-// 회원가입 엔드포인트
 router.post("/api/users/signup", async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '회원가입'
-  /* #swagger.requestBody = {
-      required: true,
+  /*  #swagger.requestBody = {
+        required: true,
         content: {
           "application/json": {
-          schema: { $ref: "#/components/schemas/userSignupExample" },
-            example: { 
-              $ref: "#/components/examples/userSignupExample"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "obiwan98@cj.net"
+                },
+                "name": {
+                  "example": "박광연"
+                },
+                "password": {
+                  "example": "070404"
+                },
+                "role": {
+                  "example": "66a0bbfe8d7e45a08668b311"
+                },
+                "group": {
+                  "example": "66a0b1bd8d7e45a08668b300"
+                }
+              }
             }
           }
         }
       }
-  */
+    */
   const { email, name, password, role, group } = req.body;
 
   try {
@@ -87,50 +64,28 @@ router.post("/api/users/signup", async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users/login:
- *   post:
- *     summary: 로그인
- *     tags: [Users]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               email:
- *                 type: string
- *                 example: 'obiwan98@cj.net'
- *               password:
- *                 type: string
- *                 example: '070404'
- *     responses:
- *       200:
- *         description: Login successful
- *       400:
- *         description: Invalid email or password
- *       500:
- *         description: Internal server error
- */
-
-// 로그인 엔드포인트
 router.post("/api/users/login", async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '로그인'
-  /* #swagger.requestBody = {
-      required: true,
+  /*  #swagger.requestBody = {
+        required: true,
         content: {
           "application/json": {
-          schema: { $ref: "#/components/schemas/userLoginExample" },
-            example: { 
-              $ref: "#/components/examples/userLoginExample"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "obiwan98@cj.net"
+                },
+                "password": {
+                  "example": "070404"
+                }
+              }
             }
           }
         }
       }
-  */
+    */
   const { email, password } = req.body;
 
   try {
@@ -160,23 +115,6 @@ router.post("/api/users/login", async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users/me:
- *   get:
- *     summary: 현재 로그인 회원 정보
- *     tags: [Users]
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       200:
- *         description: User data
- *       404:
- *         description: User not found
- *       500:
- *         description: Internal server error
- */
-// 사용자 정보 조회 엔드포인트 (인증 필요)
 router.get("/api/users/me", auth, async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '현재 로그인 회원 정보'
@@ -194,21 +132,6 @@ router.get("/api/users/me", auth, async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users:
- *   get:
- *     summary: 모든 회원 리스트 조회
- *     tags: [Users]
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       200:
- *         description: List of users
- *       500:
- *         description: Internal server error
- */
-// 모든 사용자 목록 조회 엔드포인트 (인증 필요, 관리자만)
 router.get("/api/users/", auth, async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '모든 회원 리스트 조회'
@@ -221,30 +144,6 @@ router.get("/api/users/", auth, async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users/{id}:
- *   get:
- *     summary: _id로 특정 회원 정보 조회
- *     tags: [Users]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: User _id
- *     responses:
- *       200:
- *         description: User data
- *       404:
- *         description: User not found
- *       500:
- *         description: Internal server error
- */
-// 특정 사용자 정보 조회 엔드포인트 (인증 필요)
 router.get("/api/users/:id", auth, async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '_id로 특정 회원 정보 조회'
@@ -263,46 +162,28 @@ router.get("/api/users/:id", auth, async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users/{id}:
- *   put:
- *     summary: _id로 특정 회원 정보 업데이트
- *     tags: [Users]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: User _id
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               role:
- *                 type: string
- *                 example: '66a0bbfe8d7e45a08668b30f'
- *               group:
- *                 type: string
- *                 example: '66a0b1bd8d7e45a08668b2fe'
- *     responses:
- *       200:
- *         description: User updated successfully
- *       400:
- *         description: Failed to update user
- *       404:
- *         description: User not found
- */
-// 사용자 정보 수정 엔드포인트 (인증 필요)
 router.put("/api/users/:id", auth, async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '_id로 특정 회원 정보 업데이트'
+  /*  #swagger.requestBody = {
+        required: true,
+        content: {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "role": {
+                  "example": "66a0bbfe8d7e45a08668b311"
+                },
+                "group": {
+                  "example": "66a0b1bd8d7e45a08668b300"
+                }
+              }
+            }
+          }
+        }
+      }
+    */
   const { role, group } = req.body;
 
   try {
@@ -323,30 +204,6 @@ router.put("/api/users/:id", auth, async (req, res) => {
   }
 });
 
-/**
- * @swagger
- * /api/users/{id}:
- *   delete:
- *     summary: _id로 특정 회원 삭제
- *     tags: [Users]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: id
- *         schema:
- *           type: string
- *         required: true
- *         description: User _id
- *     responses:
- *       200:
- *         description: User deleted successfully
- *       404:
- *         description: User not found
- *       500:
- *         description: Internal server error
- */
-// 사용자 삭제 엔드포인트 (인증 필요)
 router.delete("/api/users/:id", auth, async (req, res) => {
   // #swagger.tags = ['Users']
   // #swagger.summary = '_id로 특정 회원 삭제'
@@ -362,4 +219,27 @@ router.delete("/api/users/:id", auth, async (req, res) => {
   }
 });
 
+router.get('/api/roles', async (req, res) => {
+  // #swagger.tags = ['Users']
+  // #swagger.summary = 'User 역할 목록 조회'
+  try {
+    const roles = await Role.find();
+    res.status(200).send(roles);
+  } catch (error) {
+    console.error('Error fetching roles:', error);
+    res.status(500).send({ error: 'Internal server error' });
+  }
+});
+
+router.get('/api/groups', async (req, res) => {
+  // #swagger.tags = ['Users']
+  // #swagger.summary = 'User 그룹 목록 조회'
+  try {
+    const groups = await Group.find();
+    res.status(200).send(groups);
+  } catch (error) {
+    console.error('Error fetching groups:', error);
+    res.status(500).send({ error: 'Internal server error' });
+  }
+});
 module.exports = router;
